--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
         header img { width:120px; margin-bottom:20px; }
         header h1 { font-family: 'Montserrat', sans-serif; font-size: 3rem; margin-bottom: 20px; }
         header p { font-size: 1.3rem; margin-bottom: 30px; }
-        .btn { padding: 15px 30px; background:#00D2FF; color:#fff; border:none; border-radius:50px; font-size:1.1rem; cursor:pointer; transition:0.3s; }
+        .btn {
+            padding: 15px 30px;
+            background:#00D2FF;
+            color:#fff;
+            border:none;
+            border-radius:50px;
+            font-size:1.1rem;
+            cursor:pointer;
+            transition:0.3s;
+            text-decoration:none;
+            display:inline-block;
+        }
         .btn:hover { background:#1E3DD6; }
 
         /* Sections */
@@ -64,10 +75,11 @@
 
 <!-- Header / Hero -->
 <header>
-    <img src="LOGO_IMAGE_LINK_HERE" alt="UDIX Logo">
+    <img src="https://via.placeholder.com/120x120?text=UDIX+Logo" alt="UDIX Logo">
     <h1>UDIX – Design. Optimize. Grow.</h1>
     <p>Web Design | SEO | Social Media</p>
-    <button class="btn">Get Your Website</button>
+    <a class="btn" href="https://wa.me/7348154462" target="_blank">WhatsApp</a>
+    <a class="btn" href="mailto:utsavpandeyji71@gmail.com">Email Me</a>
 </header>
 
 <!-- About Section -->
@@ -77,7 +89,7 @@
         UDIX helps businesses grow online with modern website design, smart SEO, and effective social media management. 
         We combine creativity and strategy to deliver digital solutions that get results.
     </p>
-    <img src="ABOUT_IMAGE_LINK_HERE" alt="About UDIX">
+    <img src="https://via.placeholder.com/600x400?text=About+UDIX+Image" alt="About UDIX">
 </section>
 
 <!-- Services Section -->
@@ -85,17 +97,17 @@
     <h2>Our Services</h2>
     <div class="services-container">
         <div class="service-box">
-            <img src="SERVICE1_IMAGE_LINK_HERE" alt="Web Design">
+            <img src="https://via.placeholder.com/80x80?text=Web+Design" alt="Web Design">
             <h3>Web Design</h3>
             <p>Modern, responsive websites that reflect your brand.</p>
         </div>
         <div class="service-box">
-            <img src="SERVICE2_IMAGE_LINK_HERE" alt="SEO Management">
+            <img src="https://via.placeholder.com/80x80?text=SEO" alt="SEO Management">
             <h3>SEO Management</h3>
             <p>Improve your search ranking & drive traffic to your website.</p>
         </div>
         <div class="service-box">
-            <img src="SERVICE3_IMAGE_LINK_HERE" alt="Social Media Management">
+            <img src="https://via.placeholder.com/80x80?text=Social+Media" alt="Social Media Management">
             <h3>Social Media Management</h3>
             <p>Grow your audience and engagement online.</p>
         </div>
@@ -116,7 +128,7 @@
 <!-- Footer / Contact -->
 <footer>
     Designed & Developed by <strong>UDIX</strong> <br>
-    <a href="YOUR_LANDING_PAGE_LINK_HERE">www.udix.digital</a> <br>
+    <a href="https://www.udix.digital" target="_blank">www.udix.digital</a> <br>
     Web Design | SEO | Social Media
 </footer>
 
